feat: basic tests for deep translator library

--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,11 @@ numpy = "*"
 imageio = "*"
 opencv-python = "*"
 tensorflow = "*"
+googletrans = "*"
 
 [dev-packages]
 pre-commit = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
+
