--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,1 +1,1 @@
-known_third_party = cv2,funcy,imageio,numpy,pytesseract,tensorflow
+known_third_party = PIL,cv2,funcy,imageio,numpy,pytesseract,tensorflow
