add text drawer method

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,1 +1,1 @@
-known_third_party = PIL,cv2,deep_translator,funcy,imageio,numpy,pytesseract,tensorflow
+known_third_party = PIL,cv2,deep_translator,funcy,numpy,pytesseract,tensorflow
