--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-funcy = "*"
 numpy = "*"
-imageio = "*"
 opencv-python = "*"
 tensorflow = "*"
+funcy = "*"
+imageio = "*"
 googletrans = "*"
 pytesseract = "*"
+deep-translator = "*"
+setuptools = "*"
+requests = "*"
 
 [dev-packages]
 pre-commit = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.8.10"
