--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "main.py",
             "args": [
                 "-f",
-                "karakuri_1.jpg",
+                "karakuri_1.png",
             ],
             "console": "integratedTerminal",
             "justMyCode": true
