--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,11 +13,11 @@
                 "-f",
                 "karakuri_1.png",
             ],
-            "env": {
-                "TESSERACT_PATH": "C:\\Program Files\\Tesseract-OCR\\tesseract.exe"
-            },
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": true, 
+            "env": {
+                "TESSERACT_PATH": "C:\\Porgram Files\\Tesseract-OCR\\tesseract.exe"            
+            }
         }
     ]
 }
