--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,9 @@
                 "-f",
                 "karakuri_1.png",
             ],
-            "env": {
+            "windows": {"env": {
                 "TESSERACT_PATH": "C:\\Porgram Files\\Tesseract-OCR\\tesseract.exe"            
-            },
+            }},        
             "console": "integratedTerminal",
             "justMyCode": true
         }
