--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,1 +1,1 @@
-known_third_party = PIL,cv2,deep_translator,funcy,numpy,pydantic,pytesseract,tensorflow
+known_third_party = PIL,aggdraw,cv2,deep_translator,funcy,numpy,pydantic,pytesseract,tensorflow
