--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,28 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Single image",
+            "name": "Single Karakuri image",
             "type": "python",
             "request": "launch",
             "program": "main.py",
             "args": [
                 "-f",
                 "karakuri_1.png",
+            ],
+            "env": {
+                "TESSERACT_PATH": "C:\\Program Files\\Tesseract-OCR\\tesseract.exe"
+            },
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "Single weird image",
+            "type": "python",
+            "request": "launch",
+            "program": "main.py",
+            "args": [
+                "-f",
+                "input_1.png",
             ],
             "env": {
                 "TESSERACT_PATH": "C:\\Program Files\\Tesseract-OCR\\tesseract.exe"
